--- a/README.rmd
+++ b/README.rmd
@@ -4,9 +4,12 @@ output: md_document
 ---
 ## Carbon footprint for TESA activities
 
-This calculates and incremental carbon footprint for participants in TESA activities. From this you can calculate the total incremental carbon emissions from an activity (tonnes CO2).
+The group Technical Expertise in Stock Assessment (TESA) organises courses and workshops each year for DFO employees to continuarlly build the expertise in the Department of Fisheries and Oceans to get to, remain at and hopefully push the boundaries of stock assessment expertise. The activities organised by TESA entail a carbon footprint in the form of travel to training courses and workshops. TESA also, however, offers online training possibilities each year which have little or neglible incremental carbon emissions associated with them.
 
-Carbon emissions per km flying, driving, train or bus and emissions for a night in a hotel or average meal in a restaurant are taken from https://calculator.carbonfootprint.com/. Flying distances are generally taken as direct air distances between cities (https://canada-map.com/distance/). For smaller airports, where doubling back usually occurs then this is considered. For example Mont-Joli to St. John's requires that you fly southwest to Montreal before flying over Mont-Joli again northeast to get to St. John's. There we no effort to account for example that essentially straight flights would still have layovers at intermediate airports that could add km to the actual flying distance. The multiple possible routings can easily violate assumptions made in that kind of consideration.
+In an effort to quantify TESA carbon emissions, to track them by year, activity and location, this carbon footprint calculator has been developed. It accounts only for travel related carbon emissions (transport, hotel, meals) associated with TESA activities.
+
+Carbon emissions (tonnes CO2) per km flying, driving, train or bus and emissions for a night in a hotel or average meal in a restaurant are taken from https://calculator.carbonfootprint.com/. Flying distances are generally taken as direct air distances between cities (https://canada-map.com/distance/). For smaller airports, where doubling back usually occurs then this is considered. For example Mont-Joli to St. John's requires that you fly southwest to Montreal before flying over Mont-Joli again northeast to get to St. John's. There we no effort to account for example that essentially straight flights would still have layovers at intermediate airports that could add km to the actual flying distance. The multiple possible routings can easily violate assumptions made in that kind of consideration and we cannot really account for that in this kind of calculator since each
+traveller will determine their own routing.
 
 Given assumptions, the most useful aspect of this is to keep calculations consistent and then look at changes from year to year in the carbon emissions.
 
@@ -25,22 +28,26 @@ library(TESAcarbon)
 library(TESAcarbon)
 ```
 
-## Calculate the incremental carbon footprint
+## Calculate the incremental carbon footprint for a traveller
 
-Five nights in a hotel, a 1200 km return plane trip, 40 km of driving to and from airport solo and 15 meals
+Five nights in a hotel, a 600 km plane trip (1200 km total return), 40 km of driving to and from airport solo and 15 meals
 
 ```{r personal}
 C.f(hotel.nights=5,
-    plane.distance=1200,
+    plane.distance=600*2,
     bustrain.distance= 0,
     car.distance=40,
     number.car.sharing=1,
     meals=15)
 ```
 
+
+## Carbon emissions for a hypothetical course in Ottawa
+
 Here is an example for a course being held in Ottawa with 27 participants from all regions. Most participants fly but two participants from Burlington decide to drive and share a car. Most participants stay five days but a couple stay only four. It is assumed that everyone except people from Ottawa have 14 meals. The Ottawa people have 1 meal which is the group supper. The course instructor is from Copenhagen and they have one more night's stay and 3 more meals.
 
 ```{r group}
+# This is how you would import the csv file but it is already available by default in the library
 #TESA.course= read.csv("TESA.course.csv")
 TESA.course$C= C.f(hotel.nights=TESA.course$hotel.nights,
     plane.distance=TESA.course$plane.distance*2,
@@ -53,6 +60,53 @@ sum(TESA.course$C)
 ```
 
 You will see that the Copenhagen trip is the most carbon heavy while the locals in Ottawa have the lowest footprint. Driving a large car from Burlington with two people is not very different than flying from Halifax or Moncton. The total incremental carbon footprint of TESA activity is 17.2 tonnes of C02.
+
+## Projected carbon emissions for TESA 2019/20 activities
+
+In order to distribute money to regions each year, TESA requires a fairly solid participant list from each region where travel costs per participant can be determined and funds allocated accordingly. This list was used to develop a projected carbon emissions scenario for 2019.
+
+First you need to determine the flying distances from the distances lookup square matrix. This is sparse at the moment with only locations that have DFO research labs associated with them included as that is where TESA activity participants come from (fill this in further if you want and create a pull request).
+
+```{r distancelookup}
+activities= as.character(unique(TESA19to20$activity.name))
+all.activity.distance=vector()
+for (i in 1:length(activities)){
+  activity= activities[i]
+  specific.activity= TESA19to20[TESA19to20$activity.name==activity,]
+  activity.plane.distance= distance.match.f(specific.activity$origin,specific.activity$destination)[,1]
+  all.activity.distance= c(all.activity.distance, activity.plane.distance)
+}
+all.activity.distance[is.na(all.activity.distance)]=0
+TESA19to20$plane.distance= all.activity.distance
+```
+
+
+The above does some formatting as well like it changes NA to 0.
+
+```{r TESA1920}
+TESA19to20$C= C.f(hotel.nights=TESA19to20$hotel.nights,
+    plane.distance=TESA19to20$plane.distance*2,
+    bustrain.distance= TESA19to20$bustrain.distance*2,
+    car.distance= TESA19to20$car.distance*2,
+    number.car.sharing=TESA19to20$car.sharing,
+    meals=TESA19to20$meals)
+TESA19to20$C[is.nan(TESA19to20$C)]=0
+round(sum(TESA19to20$C),3)
+```
+
+Now we can summarise the calculation and make a table
+
+```{r TESA1920summary}
+total.per.activity= round(tapply(TESA19to20$C,TESA19to20$activity.name,sum),3)
+participants.per.activity= tapply(TESA19to20$C,TESA19to20$activity.name,length)
+per.capita.per.activity=round(total.per.activity/participants.per.activity,3)
+mean.per.capita= round(mean(per.capita.per.acitivty),3)
+total.C= round(sum(TESA19to20$C),3)
+sort.of.nice.table= t(rbind(total.per.activity,participants.per.activity,per.capita.per.activity))
+sort.of.nice.table=rbind(sort.of.nice.table, c(sum(sort.of.nice.table[,1]),sum(sort.of.nice.table[,2]),mean(sort.of.nice.table[,3])))
+row.names(sort.of.nice.table)[6]=  "Summary"
+sort.of.nice.table
+```
 
 ## References
 
