--- a/README.rmd
+++ b/README.rmd
@@ -1,6 +1,6 @@
 ---
 author: "Daniel E. Duplisea"
-output: md_document
+output: html_document
 ---
 ## Carbon footprint for TESA activities
 
@@ -42,25 +42,6 @@ C.f(hotel.nights=5,
 ```
 
 
-## Carbon emissions for a hypothetical course in Ottawa
-
-Here is an example for a course being held in Ottawa with 27 participants from all regions. Most participants fly but two participants from Burlington decide to drive and share a car. Most participants stay five days but a couple stay only four. It is assumed that everyone except people from Ottawa have 14 meals. The Ottawa people have 1 meal which is the group supper. The course instructor is from Copenhagen and they have one more night's stay and 3 more meals.
-
-```{r group}
-# This is how you would import the csv file but it is already available by default in the library
-#TESA.course= read.csv("TESA.course.csv")
-TESA.course$C= C.f(hotel.nights=TESA.course$hotel.nights,
-    plane.distance=TESA.course$plane.distance*2,
-    bustrain.distance= TESA.course$bustrain.distance*2,
-    car.distance= TESA.course$car.distance*2,
-    number.car.sharing=TESA.course$car.sharing,
-    meals=TESA.course$meals)
-TESA.course[,c(2,10)]
-sum(TESA.course$C)
-```
-
-You will see that the Copenhagen trip is the most carbon heavy while the locals in Ottawa have the lowest footprint. Driving a large car from Burlington with two people is not very different than flying from Halifax or Moncton. The total incremental carbon footprint of TESA activity is 17.2 tonnes of C02.
-
 ## Projected carbon emissions for TESA 2019/20 activities
 
 In order to distribute money to regions each year, TESA requires a fairly solid participant list from each region where travel costs per participant can be determined and funds allocated accordingly. This list was used to develop a projected carbon emissions scenario for 2019.
@@ -100,14 +81,18 @@ Now we can summarise the calculation and make a table
 total.per.activity= round(tapply(TESA19to20$C,TESA19to20$activity.name,sum),3)
 participants.per.activity= tapply(TESA19to20$C,TESA19to20$activity.name,length)
 per.capita.per.activity=round(total.per.activity/participants.per.activity,3)
-mean.per.capita= round(mean(per.capita.per.acitivty),3)
+mean.per.capita= round(mean(per.capita.per.activity),3)
 total.C= round(sum(TESA19to20$C),3)
-sort.of.nice.table= t(rbind(total.per.activity,participants.per.activity,per.capita.per.activity))
-sort.of.nice.table=rbind(sort.of.nice.table, c(sum(sort.of.nice.table[,1]),sum(sort.of.nice.table[,2]),mean(sort.of.nice.table[,3])))
-row.names(sort.of.nice.table)[6]=  "Summary"
-sort.of.nice.table
+tab= data.frame(Activity=names(total.per.activity),
+  Total=total.per.activity,
+  Participation=participants.per.activity,
+  C.per.person=per.capita.per.activity)
+tab
+sum(tab$Total)
+sum(tab$Participation)
 ```
 
+TESA's total incremental Carbon footprint for 2019/20 is projected to be just over 73 tonnes CO2. 204 people are supposed to participate in TESA activities.
 ## References
 
 https://calculator.carbonfootprint.com/
