--- a/README.rmd
+++ b/README.rmd
@@ -1,6 +1,6 @@
 ---
 author: "Daniel E. Duplisea"
-output: html_document
+output: md_document
 ---
 ## Carbon footprint for meetings and courses
 
@@ -64,9 +64,13 @@ carbon.footprint.f(TESA19.20, "TESA carbon footprint 2019-20", list.out=F)
 
 ## A shiny implementation
 
-You can run this as a shiny application on your webbrowser. You will need to install the package shiny from CRAN and then use the command
+You can run this as a shiny application on your webbrowser. You will need to install the package TESAcarbon (which requires devtools to install), shiny and shinybusy from CRAN (the code below checks to see if you have them and installs them if not) and then use the runGitHub command
 
 ```{r shinyapp, eval=FALSE}
+if (!require('shiny')) install.packages('shiny'); library('shiny')
+if (!require('shinybusy')) install.packages('shinybusy')
+if (!require('devtools')) install.packages('devtools')
+if (!require('TESAcarbon')) devtools::install_github('duplisea/TESAcarbon')
 runGitHub(repo="TESAcarbon", username="duplisea", subdir="shiny")
 ```
 
